--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 00:16:17.098657: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 00:32:25.992272: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "# 导入建立神经网络的基本模块\n",
     "from keras.preprocessing import image\n",
     "from keras.models import Model\n",
-    "from keras.layers import Dense, GlobalAveragePooling2D\n",
+    "from keras.layers import Dense, GlobalAveragePooling2D, Dropout\n",
     "\n",
     "from keras.optimizers import *\n",
     "from keras.losses import categorical_crossentropy\n",
@@ -83,7 +83,7 @@
     "OUT_PATH_ROOT = '/data/Models/TWITTER_SENT_2015/'\n",
     "OUT_LOG_PATH = OUT_PATH_ROOT + 'logs/'\n",
     "\n",
-    "BATCH_SIZE = 512\n",
+    "BATCH_SIZE = 1024\n",
     "TOTAL_EPOCH = 300"
    ],
    "metadata": {
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
-    "# HP_DROPOUT = hp.HParam('dropout', hp.RealInterval(0.1, 0.2))\n",
+    "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.5, 1.0]))\n",
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam', 'sgd']))\n",
     "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))\n",
     "METRIC_ACCURACY = 'accuracy'"
@@ -223,6 +223,7 @@
     "    x = base_model.output\n",
     "    x = GlobalAveragePooling2D()(x)  # 添加全局平均池化层 将 MxNxC 的张量转换成 1xC 张量，C是通道数\n",
     "    x = Dense(hparams[HP_NUM_UNITS], activation='relu')(x)  # 添加一个全连接层\n",
+    "    x = Dropout(hparams[HP_DROPOUT])(x)  # 添加一个隐藏层\n",
     "    predictions = Dense(2, activation='softmax')(x)  # 自定义自己的分类器，这是一个2分类的分类器\n",
     "    model = Model(inputs=base_model.input, outputs=predictions)  # 构建我们需要训练的完整模型\n",
     "\n",
@@ -231,13 +232,13 @@
     "        layer.trainable = False\n",
     "\n",
     "    # 编译模型\n",
-    "    if hparams[HP_OPTIMIZER] == \"adam\":\n",
-    "        optimizer = Adam(learning_rate=hparams[HP_L_RATE])\n",
-    "    elif hparams[HP_OPTIMIZER] == \"sgd\":\n",
-    "        optimizer = SGD(learning_rate=hparams[HP_L_RATE])\n",
-    "    else:\n",
-    "        raise ValueError(\"unexpected optimizer name\")\n",
-    "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
+    "    # if hparams[HP_OPTIMIZER] == \"adam\":\n",
+    "    #     optimizer = Adam(learning_rate=hparams[HP_L_RATE])\n",
+    "    # elif hparams[HP_OPTIMIZER] == \"sgd\":\n",
+    "    #     optimizer = SGD(learning_rate=hparams[HP_L_RATE])\n",
+    "    # else:\n",
+    "    #     raise ValueError(\"unexpected optimizer name\")\n",
+    "    model.compile(optimizer=hparams[HP_OPTIMIZER], loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
     "\n",
     "    # 训练\n",
     "    model.fit_generator(generator=train_generator,\n",
@@ -284,55 +285,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 00:16:22.052894: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.061548: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.063221: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.065119: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2023-01-07 00:32:30.888226: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:30.896679: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:30.898269: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:30.900043: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-07 00:16:22.065768: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.067395: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.068910: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.877932: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.879565: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.881070: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.882474: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n",
-      "/tmp/ipykernel_24394/86911547.py:26: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
-      "  model.fit_generator(generator=train_generator,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/300\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-07 00:16:51.096283: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
-      "2023-01-07 00:16:51.921016: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - ETA: 0s - loss: 0.9337 - accuracy: 0.3359WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
-      "1/1 [==============================] - 28s 28s/step - loss: 0.9337 - accuracy: 0.3359\n",
-      "Epoch 2/300\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.7040 - accuracy: 0.6571WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
-      "1/1 [==============================] - 6s 6s/step - loss: 0.7040 - accuracy: 0.6571\n",
-      "Epoch 3/300\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.7792 - accuracy: 0.6286WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 0.7792 - accuracy: 0.6286\n",
-      "Epoch 4/300\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.7767 - accuracy: 0.6571WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 0.7767 - accuracy: 0.6571\n",
-      "Epoch 5/300\n",
-      "1/1 [==============================] - ETA: 0s - loss: 0.6839 - accuracy: 0.6641WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
-      "1/1 [==============================] - 11s 11s/step - loss: 0.6839 - accuracy: 0.6641\n"
+      "2023-01-07 00:32:30.900684: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:30.902283: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:30.903790: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:31.704712: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:31.706255: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:31.707794: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:32:31.709246: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
      ]
     }
    ],
@@ -341,14 +305,16 @@
     "def run_hparams():\n",
     "    session_num = 0\n",
     "    for num_units in HP_NUM_UNITS.domain.values:\n",
-    "        for optimizer in HP_OPTIMIZER.domain.values:\n",
-    "            for learning_rate in HP_L_RATE.domain.values:\n",
+    "        for dropout_rate in HP_DROPOUT.domain.values:\n",
+    "            for optimizer in HP_OPTIMIZER.domain.values:\n",
+    "                # for learning_rate in HP_L_RATE.domain.values:\n",
     "                start_transfer_learning(\n",
     "                        LOG_DIR + f'run-{session_num}',\n",
     "                        {\n",
     "                                HP_NUM_UNITS: num_units,\n",
+    "                                HP_DROPOUT  : dropout_rate,\n",
     "                                HP_OPTIMIZER: optimizer,\n",
-    "                                HP_L_RATE   : learning_rate,\n",
+    "                                # HP_L_RATE   : learning_rate,\n",
     "                        }\n",
     "                )\n",
     "                session_num += 1\n",
