--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 00:32:25.992272: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 01:21:49.605600: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -55,11 +55,10 @@
     "# from keras.utils import plot_model\n",
     "# from keras_visualizer import visualizer\n",
     "# from IPython.display import Image, SVG, display\n",
-    "from keras.callbacks import TensorBoard\n",
     "import datetime\n",
     "\n",
-    "# zha早停\n",
-    "from keras.callbacks import EarlyStopping\n"
+    "# 回调\n",
+    "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n"
    ],
    "metadata": {
     "collapsed": false
@@ -83,7 +82,6 @@
     "OUT_PATH_ROOT = '/data/Models/TWITTER_SENT_2015/'\n",
     "OUT_LOG_PATH = OUT_PATH_ROOT + 'logs/'\n",
     "\n",
-    "BATCH_SIZE = 1024\n",
     "TOTAL_EPOCH = 300"
    ],
    "metadata": {
@@ -167,9 +165,9 @@
     "test_datagen = ImageDataGenerator(preprocessing_function=preprocess_input, )\n",
     "\n",
     "# 数据输入\n",
-    "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=BATCH_SIZE)\n",
-    "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=BATCH_SIZE)\n",
-    "test_generator = test_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}test', target_size=(299, 299), batch_size=BATCH_SIZE)"
+    "train_generator = train_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}train', target_size=(299, 299), batch_size=617)\n",
+    "val_generator = val_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}validation', target_size=(299, 299), batch_size=176)\n",
+    "test_generator = test_datagen.flow_from_directory(directory=f'{DATASET_PATH_ROOT}test', target_size=(299, 299), batch_size=89)"
    ],
    "metadata": {
     "collapsed": false
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [
     {
      "data": {
@@ -207,12 +205,15 @@
     "# @formatter:on"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def start_transfer_learning(run_dir, hparams):\n",
@@ -241,31 +242,34 @@
     "    model.compile(optimizer=hparams[HP_OPTIMIZER], loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
     "\n",
     "    # 训练\n",
-    "    model.fit_generator(generator=train_generator,\n",
-    "                        steps_per_epoch=(617 // BATCH_SIZE),  #800\n",
-    "                        epochs=TOTAL_EPOCH,\n",
-    "                        validation_data=val_generator,\n",
-    "                        # validation_steps=(176 // BATCH_SIZE),\n",
-    "                        validation_freq=10,\n",
-    "                        class_weight=None,  #不要这个,\n",
-    "                        callbacks=\n",
-    "                        [\n",
-    "                                TensorBoard(log_dir=run_dir),\n",
-    "                                hp.KerasCallback(run_dir, hparams),\n",
-    "                                EarlyStopping(monitor='val_acc', patience=10)  # 早停选项val_acc\n",
-    "                        ],\n",
-    "                        # workers=1,\n",
-    "                        )\n",
+    "    model.fit(train_generator,\n",
+    "              steps_per_epoch=1,  #800\n",
+    "              epochs=TOTAL_EPOCH,\n",
+    "              validation_data=val_generator,\n",
+    "              validation_steps=1,\n",
+    "              validation_freq=20,\n",
+    "              class_weight=None,  # 样本是均衡的\n",
+    "              callbacks=\n",
+    "              [\n",
+    "                      TensorBoard(log_dir=run_dir),  #可视化\n",
+    "                      hp.KerasCallback(run_dir, hparams),  #超参数\n",
+    "                      EarlyStopping(monitor='val_acc', patience=20),  # 早停选项\n",
+    "                      ReduceLROnPlateau(monitor='val_acc', patience=20),  # 学习率衰减\n",
+    "                      ModelCheckpoint(run_dir, monitor='val_acc', save_best_only=True, save_freq=20)  #检查点\n",
+    "\n",
+    "              ],\n",
+    "              # workers=1,\n",
+    "              )\n",
     "    # 在测试集上评估 profile_batch=5, histogram_freq=1\n",
     "    # scores = model.evaluate_generator(test_generator)\n",
-    "\n",
-    "    # 保存\n",
-    "    model.save(f'{run_dir}/Twitter2015_iv3_tl.h5')\n",
     "\n",
     "    # return scores\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -280,26 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-07 00:32:30.888226: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:30.896679: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:30.898269: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:30.900043: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-07 00:32:30.900684: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:30.902283: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:30.903790: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:31.704712: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:31.706255: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:31.707794: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:32:31.709246: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 超参数运行\n",
     "def run_hparams():\n",
