--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 01:21:49.605600: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 02:28:12.998203: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -105,8 +105,7 @@
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
     "HP_DROPOUT = hp.HParam('dropout', hp.Discrete([0.5, 1.0]))\n",
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam', 'sgd']))\n",
-    "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))\n",
-    "METRIC_ACCURACY = 'accuracy'"
+    "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))"
    ],
    "metadata": {
     "collapsed": false
@@ -136,7 +135,6 @@
     }
    ],
    "source": [
-    "\n",
     "# 训练集\n",
     "train_datagen = ImageDataGenerator(\n",
     "        preprocessing_function=preprocess_input,\n",
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -205,15 +203,12 @@
     "# @formatter:on"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def start_transfer_learning(run_dir, hparams):\n",
@@ -229,8 +224,8 @@
     "    model = Model(inputs=base_model.input, outputs=predictions)  # 构建我们需要训练的完整模型\n",
     "\n",
     "    # 锁层\n",
-    "    for layer in base_model.layers:\n",
-    "        layer.trainable = False\n",
+    "    base_model.trainable = False\n",
+    "    # base_model.summary()\n",
     "\n",
     "    # 编译模型\n",
     "    # if hparams[HP_OPTIMIZER] == \"adam\":\n",
@@ -247,18 +242,18 @@
     "              epochs=TOTAL_EPOCH,\n",
     "              validation_data=val_generator,\n",
     "              validation_steps=1,\n",
-    "              validation_freq=20,\n",
+    "              validation_freq=20,  # 验证频率\n",
     "              class_weight=None,  # 样本是均衡的\n",
     "              callbacks=\n",
-    "              [\n",
-    "                      TensorBoard(log_dir=run_dir),  #可视化\n",
-    "                      hp.KerasCallback(run_dir, hparams),  #超参数\n",
-    "                      EarlyStopping(monitor='val_acc', patience=20),  # 早停选项\n",
-    "                      ReduceLROnPlateau(monitor='val_acc', patience=20),  # 学习率衰减\n",
-    "                      ModelCheckpoint(run_dir, monitor='val_acc', save_best_only=True, save_freq=20)  #检查点\n",
+    "              [TensorBoard(log_dir=run_dir),  #可视化\n",
+    "               hp.KerasCallback(run_dir, hparams),  #超参数\n",
+    "               EarlyStopping(monitor='val_accuracy', patience=20),  # 早停选项\n",
+    "               ReduceLROnPlateau(monitor='val_accuracy', patience=20),  # 学习率衰减\n",
+    "               ModelCheckpoint(filepath=run_dir + '/Twitter2015_iv3_tl.h5', monitor='val_accuracy', save_best_only=True, save_freq='epoch')\n",
+    "               #检查点\n",
     "\n",
-    "              ],\n",
-    "              # workers=1,\n",
+    "               ],\n",
+    "              workers=5,  # 线程\n",
     "              )\n",
     "    # 在测试集上评估 profile_batch=5, histogram_freq=1\n",
     "    # scores = model.evaluate_generator(test_generator)\n",
@@ -266,10 +261,7 @@
     "    # return scores\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -284,7 +276,143 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-07 02:28:17.920208: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:17.928369: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:17.929888: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:17.931739: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-01-07 02:28:17.932367: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:17.933948: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:17.935463: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:18.728817: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:18.730346: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:18.731836: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:28:18.733240: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/300\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-07 02:28:50.874990: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
+      "2023-01-07 02:28:51.661765: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - ETA: 0s - loss: 0.7405 - accuracy: 0.5640WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 33s 33s/step - loss: 0.7405 - accuracy: 0.5640 - lr: 0.0010\n",
+      "Epoch 2/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 2.1344 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 2.1344 - accuracy: 0.6726 - lr: 0.0010\n",
+      "Epoch 3/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.9033 - accuracy: 0.5186WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.9033 - accuracy: 0.5186 - lr: 0.0010\n",
+      "Epoch 4/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.5651 - accuracy: 0.7066WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.5651 - accuracy: 0.7066 - lr: 0.0010\n",
+      "Epoch 5/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.5511 - accuracy: 0.7261WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.5511 - accuracy: 0.7261 - lr: 0.0010\n",
+      "Epoch 6/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.6115 - accuracy: 0.7245WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.6115 - accuracy: 0.7245 - lr: 0.0010\n",
+      "Epoch 7/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4694 - accuracy: 0.7699WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4694 - accuracy: 0.7699 - lr: 0.0010\n",
+      "Epoch 8/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4674 - accuracy: 0.8136WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4674 - accuracy: 0.8136 - lr: 0.0010\n",
+      "Epoch 9/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.5430 - accuracy: 0.7553WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.5430 - accuracy: 0.7553 - lr: 0.0010\n",
+      "Epoch 10/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4703 - accuracy: 0.7974WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4703 - accuracy: 0.7974 - lr: 0.0010\n",
+      "Epoch 11/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4013 - accuracy: 0.8395WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4013 - accuracy: 0.8395 - lr: 0.0010\n",
+      "Epoch 12/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4099 - accuracy: 0.7942WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.4099 - accuracy: 0.7942 - lr: 0.0010\n",
+      "Epoch 13/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4429 - accuracy: 0.7763WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4429 - accuracy: 0.7763 - lr: 0.0010\n",
+      "Epoch 14/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4134 - accuracy: 0.8055WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4134 - accuracy: 0.8055 - lr: 0.0010\n",
+      "Epoch 15/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.3825 - accuracy: 0.8428WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.3825 - accuracy: 0.8428 - lr: 0.0010\n",
+      "Epoch 16/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4008 - accuracy: 0.8379WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4008 - accuracy: 0.8379 - lr: 0.0010\n",
+      "Epoch 17/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.4005 - accuracy: 0.8428WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.4005 - accuracy: 0.8428 - lr: 0.0010\n",
+      "Epoch 18/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.3613 - accuracy: 0.8574WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.3613 - accuracy: 0.8574 - lr: 0.0010\n",
+      "Epoch 19/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.3301 - accuracy: 0.8639WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.3301 - accuracy: 0.8639 - lr: 0.0010\n",
+      "Epoch 20/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.3339 - accuracy: 0.8476"
+     ]
+    }
+   ],
    "source": [
     "# 超参数运行\n",
     "def run_hparams():\n",
