--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 02:38:11.228004: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 02:50:39.277647: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -242,19 +242,21 @@
     "              epochs=TOTAL_EPOCH,\n",
     "              validation_data=val_generator,\n",
     "              validation_steps=1,\n",
-    "              validation_freq=1,  # 验证频率\n",
+    "              validation_freq=20,  # 验证频率\n",
     "              class_weight=None,  # 样本是均衡的\n",
     "              callbacks=\n",
     "              [TensorBoard(log_dir=run_dir),  #可视化\n",
     "               hp.KerasCallback(run_dir, hparams),  #超参数\n",
     "               EarlyStopping(monitor='val_accuracy', patience=20),  # 早停选项\n",
     "               ReduceLROnPlateau(monitor='val_accuracy', patience=20),  # 学习率衰减\n",
-    "               ModelCheckpoint(f'{run_dir}/Twitter2015_iv3_tl.h5', monitor='val_accuracy', save_best_only=True, save_freq=20)  #检查点\n",
+    "               ModelCheckpoint(f'{run_dir}/Twitter2015_iv3_tl.h5', monitor='val_accuracy', save_best_only=True, save_freq='epoch')  #检查点\n",
     "               ],\n",
     "              workers=5,  # 线程\n",
     "              )\n",
-    "    # 在测试集上评估 profile_batch=5, histogram_freq=1\n",
-    "    # scores = model.evaluate_generator(test_generator)\n",
+    "\n",
+    "    # 在测试集上评估\n",
+    "    scores = model.evaluate_generator(test_generator)\n",
+    "    print(scores)\n",
     "\n",
     "    # return scores\n"
    ],
@@ -279,18 +281,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 02:38:16.109366: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.117500: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.119089: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.120934: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "2023-01-07 02:50:44.143326: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.151541: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.153103: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.154911: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-07 02:38:16.121501: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.123103: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.124609: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.921470: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.923044: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.924488: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 02:38:16.925889: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
+      "2023-01-07 02:50:44.155488: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.157047: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.158499: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.953027: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.954636: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.956113: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 02:50:44.957557: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
      ]
     },
     {
@@ -304,32 +306,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-07 02:38:49.015670: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
-      "2023-01-07 02:38:49.825436: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
+      "2023-01-07 02:51:17.421649: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
+      "2023-01-07 02:51:18.220446: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 46s 46s/step - loss: 0.8857 - accuracy: 0.4587 - val_loss: 5.6035 - val_accuracy: 0.6420 - lr: 0.0010\n",
+      "1/1 [==============================] - ETA: 0s - loss: 1.0789 - accuracy: 0.3955WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 33s 33s/step - loss: 1.0789 - accuracy: 0.3955 - lr: 0.0010\n",
       "Epoch 2/300\n",
-      "1/1 [==============================] - 17s 17s/step - loss: 5.2475 - accuracy: 0.6726 - val_loss: 3.4543 - val_accuracy: 0.6420 - lr: 0.0010\n",
+      "1/1 [==============================] - ETA: 0s - loss: 5.1876 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 5.1876 - accuracy: 0.6726 - lr: 0.0010\n",
       "Epoch 3/300\n",
-      "1/1 [==============================] - 18s 18s/step - loss: 3.1714 - accuracy: 0.6726 - val_loss: 1.0770 - val_accuracy: 0.6420 - lr: 0.0010\n",
+      "1/1 [==============================] - ETA: 0s - loss: 3.6470 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 3.6470 - accuracy: 0.6726 - lr: 0.0010\n",
       "Epoch 4/300\n",
-      "1/1 [==============================] - 17s 17s/step - loss: 1.0370 - accuracy: 0.6726 - val_loss: 0.9832 - val_accuracy: 0.3750 - lr: 0.0010\n",
-      "Epoch 5/300\n",
-      "1/1 [==============================] - 18s 18s/step - loss: 1.0516 - accuracy: 0.4084 - val_loss: 1.3438 - val_accuracy: 0.3580 - lr: 0.0010\n",
-      "Epoch 6/300\n",
-      "1/1 [==============================] - 17s 17s/step - loss: 1.3914 - accuracy: 0.3339 - val_loss: 1.0604 - val_accuracy: 0.3580 - lr: 0.0010\n",
-      "Epoch 7/300\n",
-      "1/1 [==============================] - 17s 17s/step - loss: 1.1242 - accuracy: 0.3468 - val_loss: 0.7332 - val_accuracy: 0.4261 - lr: 0.0010\n",
-      "Epoch 8/300\n",
-      "1/1 [==============================] - 17s 17s/step - loss: 0.7631 - accuracy: 0.4878 - val_loss: 0.5668 - val_accuracy: 0.7784 - lr: 0.0010\n",
-      "Epoch 9/300\n",
-      "1/1 [==============================] - 17s 17s/step - loss: 0.5832 - accuracy: 0.7245 - val_loss: 0.5858 - val_accuracy: 0.6477 - lr: 0.0010\n",
-      "Epoch 10/300\n"
+      "1/1 [==============================] - ETA: 0s - loss: 1.7597 - accuracy: 0.6726WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 1.7597 - accuracy: 0.6726 - lr: 0.0010\n",
+      "Epoch 5/300\n"
      ]
     }
    ],
