--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -255,8 +255,8 @@
     "              )\n",
     "\n",
     "    # 在测试集上评估\n",
-    "    scores = model.evaluate_generator(test_generator)\n",
-    "    print(scores)\n",
+    "    # scores = model.evaluate_generator(test_generator)\n",
+    "    # print(scores)\n",
     "\n",
     "    # return scores\n"
    ],
@@ -333,7 +333,32 @@
       "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
       "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
       "1/1 [==============================] - 13s 13s/step - loss: 1.7597 - accuracy: 0.6726 - lr: 0.0010\n",
-      "Epoch 5/300\n"
+      "Epoch 5/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.6327 - accuracy: 0.6791WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.6327 - accuracy: 0.6791 - lr: 0.0010\n",
+      "Epoch 6/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.8662 - accuracy: 0.3971WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.8662 - accuracy: 0.3971 - lr: 0.0010\n",
+      "Epoch 7/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.9838 - accuracy: 0.3404WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.9838 - accuracy: 0.3404 - lr: 0.0010\n",
+      "Epoch 8/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.9045 - accuracy: 0.3323WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.9045 - accuracy: 0.3323 - lr: 0.0010\n",
+      "Epoch 9/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.7535 - accuracy: 0.4003WARNING:tensorflow:Early stopping conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy\n",
+      "WARNING:tensorflow:Learning rate reduction is conditioned on metric `val_accuracy` which is not available. Available metrics are: loss,accuracy,lr\n",
+      "WARNING:tensorflow:Can save best model only with val_accuracy available, skipping.\n",
+      "1/1 [==============================] - 13s 13s/step - loss: 0.7535 - accuracy: 0.4003 - lr: 0.0010\n",
+      "Epoch 10/300\n"
      ]
     }
    ],
